# ProcMonD-Prototype

./: .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  ConfigManager.py  Detectors.py  README.md  WARP.md  justfile  procmond.py  procmond.sample.conf  pyproject.toml  pyrightconfig.json  requirements.txt  run_smoke.py
.cursor/rules/: daemon-patterns.mdc  project-structure.mdc  python-standards.mdc  security-patterns.mdc  testing-patterns.mdc
.github/: copilot-instructions.md
AlertHandlers/: EmailAlertHandler.py  SyslogAlertHandler.py  WebHookAlertHandler.py
AppDataTypes/: Alert.py  ProcessRecord.py
docs/: systemd.md  windows-service.md
scripts/: __init__.py  run_smoke.py
src/procmond/: __init__.py  cli.py  daemon.py
src/procmond/core/: __init__.py  config_manager.py  detectors.py
src/procmond/handlers/: __init__.py  email_alert_handler.py  syslog_alert_handler.py  webhook_alert_handler.py
src/procmond/models/: __init__.py  alert.py  process_record.py
tests/: __init__.py  test_detectors.py  test_processrecord.py
