[project]
name = "procmond-prototype"
version = "0.1.0"
description = "Prototype process monitoring daemon"
requires-python = ">=3.10"

[tool.ruff]
line-length = 140
select = ["E", "F", "W", "C90", "ANN", "S", "RET"]
extend-select = ["I"]
ignore = ["E203"]
# Keep autofixes enabled for safe rules during local dev
fix = true

[tool.ruff.per-file-ignores]
"tests/*" = ["E501", "S101", "ANN"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
